2004-08-02  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_scan): For %i format, recognize numbers
	with leading 0x or 0X as hex and leading 0 as octal.

	* OPERATORS/op-fcn-handle.cc: Delete.
	* Makefile.in (OP_XSRC): Delete it from the list.
	* pr-output.cc (octave_print_internal (std::ostream&, const
	std::string&, bool, int): New function.
	* ov-fcn-handle.cc (octave_value::subsref): New function.
	* ov-fcn-handle.h (class fcn_handle_elt, class fcn_handle_array):
	Delete.
	(class octave_fcn_handle): Derive from octave_base_value, not
	octave_base_matrix<fcn_handle_array>.

	* ov-cx-mat.cc (try_narrowing_conversion): Also allow complex to
	real conversion for N-d arrays.

2004-07-30  John W. Eaton  <jwe@octave.org>

	* lex.l (<COMMAND_START>[^#% \t\r\n\;\,\"\'][^ \t\r\n\;\,]*{S}*):
	Also recognize \r as a word list separator.

2004-07-27  John W. Eaton  <jwe@octave.org>

	* bitfcns.cc (DO_BITSHIFT): Pass mask to bitshift.
	(bitshift (double, int, EIGHT_BYTE_INT): New arg, mask.
	(DO_UBITSHIFT, DO_SBITSHIFT): Use bitshfit, not operator >>.
	Use nbits function from octave_int type to set bits_in_type.

	* ov-struct.cc (Fisfield): Only print usage message if number of
	arguments is incorrect.  Return false for invalid arguments.
	From Andy Adler <adler@site.uottawa.ca>.

2004-07-27  David Bateman  <dbateman@free.fr>

	* Cell.cc (Cell::index): Quit early if an error occurs when
	creating index vector object.

	* ov-int8.cc, ov-int16.cc, ov-int32.cc, ov-int64.cc, ov-uint8.cc, 
	ov-uint16.cc, ov-uint32.cc, ov-uint64.cc (HDF5_SAVE_TYPE): Define
	for HDF5 native format for the type.

	* ov-base-int.h (save_ascii, save_binary, load_binary, save_hdf5):
	Delete unused arguments.

	* ov-base-int.cc (octave_base_int_matrix::save_ascii,
	octave_base_int_matrix::save_binary,
	octave_base_int_scalar::save_ascii,
	octave_base_int_scalar::save_binary,
	octave_base_int_scalar::save_hdf5): Delete unused argument.

	* ov-base-int.cc (octave_base_int_matrix::save_binary,