@@ -1109,14 +1109,21 @@ octave_scan (std::istream& is, const scanf_format_elt& fmt, T* valptr)
 	  {
 	    if (c1 == '0')
 	      {
-		int c2 = is.peek ();
-
-		is.putback (c1);
+		int c2 = is.get ();
 
 		if (c2 == 'x' || c2 == 'X')
 		  is >> std::hex >> ref >> std::dec;
 		else
-		  is >> std::oct >> ref >> std::dec;
+		  {
+		    is.putback (c2);
+
+		    if (c2 == '0' || c2 == '1' || c2 == '2'
+			|| c2 == '3' || c2 == '4' || c2 == '5'
+			|| c2 == '6' || c2 == '7')
+		      is >> std::oct >> ref >> std::dec;
+		    else
+		      ref = 0;
+		  }
 	      }
 	    else
 	      {
